// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiFormLabel is rendered 1`] = `
<label
  aria-label="aria-label"
  class="ouiFormLabel testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiFormLabel props isFocused is rendered 1`] = `
<label
  class="ouiFormLabel ouiFormLabel-isFocused"
/>
`;

exports[`OuiFormLabel props isInvalid is rendered 1`] = `
<label
  class="ouiFormLabel ouiFormLabel-isInvalid"
/>
`;

exports[`OuiFormLabel props type can be changed to legend 1`] = `
<legend
  class="ouiFormLabel"
/>
`;
